nhut sua phan code cua minh

--- a/FlightManagement/ChangePassword.resx
+++ b/FlightManagement/ChangePassword.resx
@@ -117,46 +117,47 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="errorProvider1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnExit_changepassword.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnSendcode_changepass.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAJgAAAA6CAYAAABMFpDEAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAALGSURBVHhe7d2tb1NRGIDxSSQSiUQikUgkhgRDguF/QEzM
-        IAiBBAQCgSAhBMgcioCBgCQExAiMsMJayLp+3O9+rLz0fVuadj0bcNtX8dzkl0yc3pkn95zbpOestNtt
-        AbwQGFwRGFwRGFwRGFwRGFz9MbAsy6SRdGQ37Ulc7AkXl3agPewmXcnzXKIoCrajDgwsTVNpD2/0ZCOR
-        8w+qcvpORY5f3ZSVyxv4z2kH2sPZe9vy6F0kzXxPoiQLdjQXmNZYjzvyupLJsSufgv8AmHZ07aOsv4/s
-        ibb/aTYTmMU1fPRdWv8evBFwmDN3v8q3VlfiOA4Hpk8u4sIidOrU9dlcYLrm0mkx9CHgX9x61ZRWks8G
-        pgt61lxYhiOrH2SrOZoqLTB91dS3gdBgoIzVpzsSZcUoMF396ytnaCBQxsmbX6SZ9cdTZN6XE9c/BwcC
-        Zeg02R/8HAVW9Af2XUZoIFCWXhaY/REYACzCuiIweLGuCAxerCsCgxfrisDgxboiMHixrggMXqwrAoMX
-        64rA4MW6IjB4sa4IDF6sKwKDF+uKwODFuiIweLGuCAxerCsCgxfrisDgxboiMHixrggMXqwrAoMX64rA
-        4MW6IjB4sa4IDF6sKwKDF+uKwODFutLA9Cfe+lPv0CCgrElguqkr+69i2SaB6e46uv1haBBQhm6mo5vq
-        WGBJVsiNl43gQKCMi49r0kw74ykyjqUW91iHYWmeb6Z2xoIFZtNknMu1FzzFsLgLD6uyE3f27dE69CPu
-        yqnbW8EPAX9D9/mtp/3JfvkzgelUWWn12O0QpWhcb2vF6JSYcVMzgakkSewwhrVn9eBNgJBz97ftyTUd
-        l5oL7LdGXMibam5vA2xvjhDddlXPsdLzrHTNFToU68DAlNaor5ppd2BfmnFxTV+6t6+exKdvi6F+1KGB
-        AYsiMLgiMLgiMLgiMDhqyy9r/oERqehlJQAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAAJYAAAA0CAYAAABo1cEHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAKsSURBVHhe7Zw9a1RBGEb9T1Z2Vv4BKzsr/4CVnZWdlZUg
+        pBALISBoFRBSiIIgCAGLgBAQUggB9/t787qPmdl97+7c6y7MVPccOJDmToocZiaXO3Or0+kYYm4JC4tI
+        WFhEwsIiEhYWkbCwiISFRdwrrG63a6PRyGazmc3nc1sulwbt4fr6+t/fXaoD9ZDqxPvfsCaTSRgeYMN0
+        Om0MrDasfr/PzASNaCYbDAbJfpJhjcfj8OiGs99mzz6ZPfpg9uDY7PZLbIv339783Z+emp1ehCAcmr22
+        G9oJSzOVpze9GTD1C7GdPnxndtkLgQS09/Id7YTllz/NUvdepwfHdnv3yOzkZwgl0Ov10mH5jbpmKqLC
+        Ju+8Mju/CsGs0H+NO2Fph+9h+cN91P5rugjRrIib+XVYWiMj3y7TgyCmfHMWwlkRN/LrsDSNRZit8BC1
+        mY9oj14Ja7HYzGe8TsBD9VTC0suuCJt2PFT9sxephOVJPYjYpIewMJsewsJseggLs+khLMymh7Awmx7C
+        wmx6CAuz6SEszKaHsDCbHsLCbHoIC7PpISzMpoewMJsewsJsemrD0gmM1MOIddZ+j+WPfekD+dTDiHX6
+        AxWVsPw3749P0g8jptQXxxF9iVwJy58pfH+eHgAx5fMvIZwV8WzhOiydYo1oWmM5xH3UoVV/3D4etV+H
+        Jf1JHR2v10OpwRCjWt0iWgbj1UaVsPysJY6+pwdDlE8+hlACw+Fw3VIlLLl9hdHnXxwHw6payY5/hEAC
+        21cZ7YQl/ZIo9I7ixVf2XW1XE4xOyV/8CWEE9Kpq+3a/ZFiy6YrIq2H4AVqBNuf+PZVH99KmroysDUty
+        XSTUoY369mVr3sawohpAZQLoPZX24U0X28q9wkI8VMLCIhIWFpGwsIiEhUUkLCxgx/4CD6yAPm27o70A
+        AAAASUVORK5CYII=
 </value>
   </data>
   <data name="btnSave_changepassword.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAJoAAAA6CAYAAABI40D5AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAKtSURBVHhe7d2xaxNhGMfxjm6Ojm666eYmTuIiuAgODv4N
-        bhmEdhAVdFCQikgpKFYQQYRCCwU7CAoqKoVS05qYs6mJMbZnRYNWfOT35nI15IzUXp7p+4EHCm0zfem9
-        l5LnhuI4NoYZ9BAa4zKExrgMoTEuQ2iMyxAa4zJ9Q6s312zscc2O34rs4LWy7b6wZEOFBYYJox7UxdHx
-        io0+qln0YTWzI81fQ7v3oh5e6MRE1e68+myzpa/2dvWHAR3qQV3cn1+3U3dXQi8KLqunntBU5cmJyI6M
-        vbPa+kbyksC/rbV+huAO36hYsfqpq6uu0BTZvsslG38eJ78KbN1U8YsduFq2uWgztq7Q9JeMyJAHXVJ1
-        fusJTWcyXS6BvBSmGzYyvbIZmu4udZDjTIY8tTZ+2f4rZXtaarZD052CDnFA3s7PNu30g+V2aHofRLeo
-        QN5evm+FG8wQ2p6LS7bQ+J58C8iPLp87zrxuh7ZzpBjeAwEGIfwnQaHpC2BQCA0uCA0uCA0uCA0uCA0u
-        CA0uCA0uCA0uCA0uCA0uCA0uCA0uCA0uCA0uCA0uCA0uCA0uCA0uCA0uCA0uCA0uCA0uCA0uCA0u0tD0
-        kXV9dB0YhDQ0raxiPy0GJQ1NO0e1DhLIm5YHaYlQCG14qhq28wF506parawNoWmp7d5LbzinIXfHbi7b
-        7Wf1dmiawmTVhmc+Jt8Gtk/Pp9DDUNRXGpr22GqL8pPoW/JjwP/TPmRdJTtPU0lD02iprZbbsv0R26HI
-        Dl2v2ORcI22rKzTNzHwj7Bw995DLKLZOu5D1l+zPyDQ9oWl0GdUmZVWpuwbWwqMfraXVeUzPDdPi7ayH
-        j2WG1hlVqVvTXWcX22+6MUzGaAeyDv16EmJWR5q+oTFMXkNojMsQGuMyhMa4DKExDhPbb2DnVuMsAjCp
-        AAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAATAAAAA6CAYAAAA3FwUhAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAMESURBVHhe7d3PS9NxHMdxj908dvRmN711k07SRegiePDQ
+        3+Bth0APUYIdFCIJkUHShAhEEBSEPAQGJiWC2Fqb++Zsc81tTmr4g97x/ny/TYfLm/V5w/MBL5BNd3yy
+        7+f7Bduq1aowxpjFETDGmNkRMMaY2REwxpjZETDGmNkRMMaY2V0ZsEKpItOreemfCaRnMiMdoylpi20z
+        xti1TTujvemLZ+XZ27wE++WWfdL9NWCvPxTcBw0kcjK7cSgr6R+yUz4RALhO2hntzdxWTe6/2nMd0pC1
+        6tSlgGntBhOB3J3+KvnaafSRAPB/VOpnLmS9U1lJ5g6aetUUMI1X13ha4uvV6E8BwA+LySO5/TQjm8F5
+        xJoCpt+8iBcAX+mlpZ6PXQqYnnnpZSMA+Cy2VJSRpb3zgOndRj0o48wLgO/qp7+keyIja+lSGDA94ddD
+        MgCw4PFKSYbmd8OA6fMWessSACz4+K3ubji6gHWOpWS7eBy9BQB+08vIGw8+hQFrH0m6Zy0AwAr35L4G
+        TH8AAEsIGACzCBgAswgYALMIGACzCBgAswgYALMIGACzCBgAswgYALMIGACzCBgAswgYALMIGACzCBgA
+        swgYALMIGACzCBgAswgYALMIGACzCBgAswgYALMIGACzCBgAswgYALMaAdN/0a3/qhsArGgErGM0JTvl
+        k+hlAPBfI2C9U1lZTB5FLwOA37aLx9I5lgoDNryYk9hSMXoLAPwWX6/KYCIIA7YZHMitJ184BwNgwr0X
+        u/LyfSEMmC62kJPh5e/R2wDgp9mNQ+mfCVy3GgErlCrSM5mRd8HP6NcAwC/52qm7Wgz2y80B062lS9I9
+        kXEHZADgE43XnedZWdgsNprVFDDd8lZRusbT8ugNl5MA/DC3VXPfvC7GS3cpYDq9nBya33W109N+LR8A
+        /EuV+pk77xpI5KQvnm1cNl5cy4D9mdZOb1XefPg5fGiMMcb+0dpHku6wfno137JPuisDxhhjPo+AMcbM
+        joAxxsyOgDHGzI6AMcaMriq/AZP7rL1ftUvmAAAAAElFTkSuQmCC
 </value>
   </data>
-  <metadata name="errorProvider1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
   <metadata name="errorProvider2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>172, 17</value>
   </metadata>
