--- a/FlightManagement/Login.resx
+++ b/FlightManagement/Login.resx
@@ -117,14 +117,8 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="pnLogin.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="pnSignup.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnSendCode_singup.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnSendCode_forgotpass.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAGEAAAAtCAYAAAC+nAW0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAJ1SURBVHhe7Zu/T1NRFMcZGR0ZGR0dHR0dWUxcTFj4HxwY
@@ -141,7 +135,7 @@
         1WStFwAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="btnRegister_signup.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnSave_forgotpass.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAWcAAAA4CAYAAAAhFzkbAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAMvSURBVHhe7d2xS1VRHMDx/qemtiY3p6Y2JzenpramtiYn
@@ -164,54 +158,12 @@
   <metadata name="error1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
-  <metadata name="pnForgotPassword.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
   <metadata name="error2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>115, 17</value>
   </metadata>
   <metadata name="errorConfirmPass.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>213, 17</value>
   </metadata>
-  <data name="btnSave_forgotpassword.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAASUAAAA/CAYAAACmXd4+AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAANESURBVHhe7d0xaxRBGIBh/5OVnVU6Kys7K7tUqeys7KxS
-        CQELiSCkCAqBQMCAKAgBISAoCAFBSBEQAikCgdGP29ndm9xdQuLebPE88IHuXM7uZWay4J0EMCKiBIyK
-        KAGjIkrAqIgSMCqiBIyKKAGjcq0onZ6n9O57Smu7KT15n9KDNyndfWmMMYtn5fWkGas7KW19S+nkrInK
-        AgujdH6R0vqX2f+YMcbcZJ7tTzY688yN0uFxSg/fzv5SY4y5zcQO6tOvJjaFmVHaPLz8JY+3J9uvg98p
-        /ThpPgiwwNGfSTPy9U/Zldg1lS5FKXZI/R+6/2ryhQC3FX0p76Rjs9M3FaW4Q+of2WJ3dJ2LKYDrivuk
-        p3tdZ+5tpPT7tFn8ZypK/Uvt2CEJEjCE2AA92up6E7+hy9ooRYDyB2Ic2YAhxX1T7JJyc/LFdxulONfl
-        xX61AIby4nPXnXzp3UYpXm7Ki3ZJwDL0f7EW99mhjVL/fOdX/sCy5O7EhDZKcbGdF1xwA8vSb09oo5Qf
-        5gWAZSjbI0pAVWV7RAmoqmyPKAFVle0RJaCqsj2iBFRVtkeUgKrK9ogSUFXZHlECqirbI0pAVWV7RAmo
-        qmyPKAFVle0RJaCqsj2iBFRVtkeUgKrK9ogSUFXZHlECqirbI0pAVWV7RAmoqmyPKAFVle0RJaCqsj2i
-        BFRVtkeUgKrK9ogSUFXZHlECqirbI0pAVWV72ijd2+gWTs+bhwADm/vfdj982y0c/WkeAgysvyEKbZSe
-        vO8WPhw1DwEGdHLWdWfl9eRZG6WXB93is/3mIcCANg+77qzuTJ61UYojW16M7ZQjHDCk84uUHrzpurP1
-        bfK8jVJ4vN19IP4cPwQwhDiR5d7E0S2OcmEqSrE76l86rX9pFgD+o92fXWdi4u/ZVJTCq6/TH45zXi4Y
-        wG3E6ev5x+nGlHfYl6IU+se4mHiPIGLlngm4idjYvPs+/epRTNwple9FzoxS1CyObv0f7k+c/2Y9N8aY
-        /kR0+ldC/Xm6N/tF7ZlRyg6PL5fNGGNuM3Hyil3TPAujFGLXFF+wtju/eMYYc9XEC9rxXtJVd9RXRglg
-        mUQJGBVRAkZFlIBRESVgVEQJGJGU/gJMx0Awo2G/4AAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="btnSendCode_forgotpassword.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAOEAAAA1CAYAAAC3HIxDAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAALpSURBVHhe7d2/a1NhFMbxjo6Ojo6Ojo6Oji5CF8HF/8Gh
-        QxcHQREdHBwcBClSdOsi4iCio4iCQS0abVpoTZo2TRPzo6/nnNxcGnqS2tqTu3wf+JwhnLTTw725gbwz
-        iRBSaCghIQWHEhJScCghIQWHEhJScCghIQXnn0q41e6nzd1eavzpZ68QQiZFu6Kdqbd62SvjM7GEWr6l
-        UiPNLlTSxYfldPbWtzRz4zOAQ2hXtDOXH6+kxY/bVshOfy9r1mjcEtZb/fSuvJvO3Pzq/gMAR3N6/kt6
-        /knK6FwZD5Sw2uyl68/W3D8E4P9cevQzVba6WdsGGSmhXgEpIBBLb1P19nSYkRLqLaj3JgAn6/7bWmp1
-        Bw868xLqQxg+AwLTcWqulMqbHeteXkJ9guMtA4gx92JdroZ7gxLqdxn6KNVbBBDj/L3v9hzGSqi3oufu
-        LLuLAGLoLWm3n10J23JJ1O8xvEUAcTT5Z0JvAUAs655NibcAIJZ1z6bEWwAQy7pnU+ItAIhl3bMp8RYA
-        xLLu2ZR4CwBiWfdsSrwFALGsezYl3gKAWNY9mxJvAUAs655NibcAIJZ1z6bEWwAQy7pnU+ItAIhl3bMp
-        8RYAxLLu2ZR4CwBiWfdsSrwFALGsezYl3gKAWNY9mxJvAUAs655NibcAIJZ1z6bEWwAQy7pnU+ItAIhl
-        3dOhv/ikv/zkLQGIk5dQz1Lj2DNg+vIS6nFNelqMtwQghv7Wr/7mb347evdNzV0EEOPa4qrdheYPZta2
-        u3wuBKbo1XLTupeXUBt5+3XVXQZwsq4+raRadkZhXkLNxk4vXXjww30TgJOhRxD+bo45JFTzq97lcBgg
-        iBbww1o7a9sgB0qo0XPr519uuH8EwPFcebIycgUcxi2hZkc+I75fbdkTHE7wBY5HTzubXaikpVIjVfed
-        U78/Y0s4jD6waXYGZ2sTQo4WPXZQvwuclENLSAiJDSUkpOBQQkIKDiUkpOBQQkIKTUp/Adg/4VPj4qGy
-        AAAAAElFTkSuQmCC
-</value>
-  </data>
   <metadata name="errorEmail_forgotpassword.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>387, 17</value>
   </metadata>
